--- a/src/pages/Home/HomePage.module.scss
+++ b/src/pages/Home/HomePage.module.scss
@@ -13,6 +13,10 @@
   flex-wrap: wrap;
   width: 100%;
 
+  button {
+    align-self: flex-start;
+  }
+
   .column {
     display: flex;
     flex-direction: column;
